--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:           pretty
 title:               Evandro Zanatta
 tagline:             Full-Stack Developer
 url:                 http://evandrozanatta.github.io
-baseurl:             /
+baseurl:             /progress-for-jekyll
 analytics_id:
 
 # Owner/author information
