--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 permalink:           pretty
 
 # Setup
-title:               Evandro Zanatta
+title:               Progress
 tagline:             Full-Stack Developer
 url:                 http://evandrozanatta.github.io
 baseurl:             /progress-for-jekyll
